kubernetes/k3s-01/workloads/musicassistant/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: musicassistant
  namespace: musicassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musicassistant
  template:
    metadata:
      labels:
        app: musicassistant
    spec:
      containers:
        - name: musicassistant
          image: ghcr.io/music-assistant/server:2.10.5@sha256:28023f8c0d96ca2496391f3218a6d70d7ef3ba84db846b3a3f3cd9ce7ef8aedc
          volumeMounts:
            - name: musicassistant
              mountPath: /data
      volumes:
        - name: musicassistant
          persistentVolumeClaim:
            claimName: musicassistant
