kubernetes/k3s-01/workloads/musicassistant/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: musicassistant
  namespace: musicassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`musicassistant.47fc5c.com`)
      kind: Rule
      services:
        - name: musicassistant
          kind: Service
          port: 8095
          scheme: http
  tls:
    secretName: musicassistant-certificate
